[gd_scene load_steps=3 format=3 uid="uid://cf44kxltc4io6"]

[ext_resource type="Script" uid="uid://dkq4nvjrn0pd5" path="res://scripts/ui/main_menu.gd" id="1"]

[sub_resource type="Theme" id="Theme_1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MenuBackground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="MenuBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="MenuBackground/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="TowerSilhouette" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="GameLogo" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1")
text = "SHADOW ASCENT"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Exit Game"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Prototype v0.1"
horizontal_alignment = 1
